--- a/style.css
+++ b/style.css
@@ -114,10 +114,9 @@ body {
   color: rgb(20, 69, 154);
 }
 
-.project-1 {
-  border: 5px solid red;
+#project-1 {
   height: 45vh;
-  width: 20%;
+  width: 20vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -125,8 +124,7 @@ body {
   margin-left: 25%;
 }
 
-.project-2 {
-  border: 5px solid red;
+#project-2 {
   height: 45vh;
   width: 20vw;
   display: flex;
@@ -138,18 +136,30 @@ body {
 
 .project-title {
   top: 0%;
-  height: 20%;
-  font-size: 3vw;
-  border: 1px solid red;
+  height: 10vh;
+  min-height: 10vh;
+  font-size: 2rem;
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 .project-image {
   height: 80%;
-  border: 1px solid red;
+  width: 75vh;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.calculatorImage {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.tryButton {
+  padding-right: 7px;
 }
 
 /* .active {
