--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ p.date {
   margin-left: auto;
 }
 
-@media only screen and (max-width: 700px) {
+@media (max-width: 700px) {
   #wrapper-grid {
     grid-template-columns: 1fr;
   }
