--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ p.date {
   margin-left: auto;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   #wrapper-grid {
     grid-template-columns: 1fr;
   }
@@ -184,7 +184,7 @@ p.date {
   }
 
   .navbar ul li a {
-    /* display: none; */
+    display: none;
     background-color: var(--clr-primary);
     width: 100px;
   }
