--- a/styles.css
+++ b/styles.css
@@ -207,10 +207,11 @@ p.date {
   justify-content: center;
   align-items: center;
   grid-template-columns: repeat(2, 1fr);
+  z-index: 95;
 }
 
 .profilePicture {
-  height: 350px;
+  height: 300px;
   display: flex;
   justify-content: center;
   border-radius: 50%;
@@ -222,7 +223,7 @@ p.date {
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 #aboutHeader {
@@ -244,7 +245,7 @@ p.date {
 }
 
 .fa-linkedin {
- margin-right: 20px;
+  margin-right: 20px;
 }
 
 #linkedin:visited {
@@ -298,26 +299,26 @@ p.date {
   }
 
   .fa-linkedin {
- margin-right: 20px;
- margin-left: 30px;
-}
+    margin-right: 20px;
+    margin-left: 30px;
+  }
 
-.fa-github {
-  margin-right: 0;
-}
+  .fa-github {
+    margin-right: 0;
+  }
 
-.menuItem {
+  .menuItem {
     z-index: 97;
   }
 
   .navbar {
     z-index: 96;
   }
-
 }
 
 @media (max-width: 650px) {
   
+
   #wrapper-grid {
     grid-template-columns: 1fr;
   }
